# default_kwargs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: default_args.rs  keyword_args.rs  lib.rs  utils.rs
tests/: trybuild.rs
tests/ui/: 01-empty.rs  01-empty.stderr  02-basic.rs  03-default.rs  04-missing-positional.rs  04-missing-positional.stderr  05-positional-only.rs  05-positional-only.stderr  06-all-kwargs.rs  07-custom-type.rs  08-kwarg-custom-type.rs  09-positional-pattern.rs  10-kwarg-pattern.rs  10-kwarg-pattern.stderr  11-generic.rs  12-generic-with-bounds.rs  13-everything-supported.rs  14-unsupported.rs  14-unsupported.stderr  15-visibility.rs  15-visibility.stderr
