[package]
name = "default_kwargs"
description = "The macro which enables you to use default and keyword arguments in Rust"
version = "0.1.0"
authors = ["zohnannor <zohnannor@gmail.com>"]
keywords = ["keyword", "default", "kwargs"]
categories = ["rust-patterns"]
repository = "https://github.com/zohnannor/default_kwargs"
exclude = ["/.github/"]
readme = "README.md"
documentation = "https://docs.rs/default_kwargs"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/trybuild.rs"

[dev-dependencies]
trybuild = { version = "1.0.58", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.17"
trybuild = "1.0.58"

[dependencies.syn]
version = "1.0.90"
features = ["full", "extra-traits", "parsing"]
